Add Netlify Next.js config

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.14.5",
     "cra-template": "1.3.0",
     "framer-motion": "^12.12.1",
     "react": "^19.1.0",
