--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "nextvibe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ruzith.github.io/NextVibe",
   "dependencies": {
-    "@netlify/plugin-nextjs": "^5.14.5",
     "cra-template": "1.3.0",
     "framer-motion": "^12.12.1",
     "react": "^19.1.0",
@@ -15,10 +15,12 @@
     "web-vitals": "^5.0.1"
   },
   "scripts": {
-    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +42,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "cross-env": "^10.1.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
