--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nextvibe",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ruzith.github.io/NextVibe",
+  "homepage": ".",
   "dependencies": {
     "cra-template": "1.3.0",
     "framer-motion": "^12.12.1",
